--- a/src/styles/ThisDayInfo.css
+++ b/src/styles/ThisDayInfo.css
@@ -34,3 +34,39 @@
     color:black; 
 }
 
+@media (max-width:1190px) {
+
+    .dop_info_this_day {
+        max-width: 650px;
+    }
+    
+    .info_this_day {
+        margin-bottom: 15px;
+    }
+    
+    .info_this_day_text {
+        font-size: 15px;
+    }
+}
+
+@media (max-width:620px) {
+    .dop_info_this_day {
+        margin-left: 0px;
+
+    }
+}
+
+@media (max-width:400px) {
+    .logo_info_this_day {
+        height: 28px;
+        width: 28px;
+        margin-right: 10px;
+    }
+
+    .info_this_day_text {
+        font-size: 12px;
+        color:#939CB0;
+    }
+
+    
+}
