--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -23,6 +23,11 @@ body {
     margin-top: 30px;
 }
 
+.footer_div {
+
+}
+
+
 @media (max-width:620px) {
     .this_day_conteiner {
         display: flex;
